--- a/index.html
+++ b/index.html
@@ -36,6 +36,27 @@
                 position: absolute;
             }
 
+            #app-bg {
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                background-color: #181818;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
+
+            #app-bg-overlay {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: rgba(0, 0, 0, 1);
+                opacity: 0;
+                visibility: hidden;
+            }
+
             canvas {
                 max-height: 100%;
                 max-width: 100%;
@@ -105,7 +126,7 @@
 
             div[hidden] {
                 display: none !important;
-            }</style><link href="sdk.8d618e94b656d0338aa8.bundle.js" rel="preload" as="script"/><link href="vendors.576d9d9dad76359603e4.bundle.js" rel="preload" as="script"/><link href="engine.ebee3a6354c9b3eb1110.bundle.js" rel="preload" as="script"/><link href="game.a48c02f2c167dba23717.bundle.js" rel="preload" as="script"/><script defer="defer" src="libs/sentry.min.js"></script><script>"use strict"
+            }</style><link href="sdk.8d618e94b656d0338aa8.bundle.js" rel="preload" as="script"/><link href="vendors.576d9d9dad76359603e4.bundle.js" rel="preload" as="script"/><link href="engine.ebee3a6354c9b3eb1110.bundle.js" rel="preload" as="script"/><link href="game.add1596dc730b85c3086.bundle.js" rel="preload" as="script"/><script defer="defer" src="libs/sentry.min.js"></script><script>"use strict"
 
     var waitSentryTimer = setInterval(function () {
     if (!window.hasOwnProperty('Sentry')) return
@@ -120,4 +141,4 @@
         tracesSampleRate: '1.0',
     })
     }, 100)</script><script>window.dataLayer = window.dataLayer || [];
-function gtag() { dataLayer.push(arguments); }</script><script src="https://assets.msn.com/staticsb/statics/latest/msstart-games-sdk/msstart-v1.0.0-rc.13.min.js"></script></head><body oncontextmenu="event.preventDefault()"><div id="app"></div><script src="sdk.8d618e94b656d0338aa8.bundle.js"></script><script>"use strict";function initFbInstant(){var t=1,n=setInterval((function(){"FBInstant"in window&&(clearInterval(n),FBInstant.initializeAsync().then((function(){window.focus();var n=FBInstant.player.getID();FBInstant.getEntryPointAsync().then((function(t){initGoogleAnalytics(n,t)})).catch((function(){initGoogleAnalytics(n,"no_entry")})),window.__fbInstantInitiated=!0,window.__fbInstantLoadingTimer=setInterval((function(){FBInstant.setLoadingProgress(t++),t>=30&&clearInterval(window.__fbInstantLoadingTimer)}),80)})))}),50)}function initGoogleAnalytics(t,n){if(window.__GA_CONFIG){var i=window.__GA_CONFIG.BUILD_VERSION,a=window.__GA_CONFIG.GA_MEASUREMENT_ID;if("null"!=a){var e=FBInstant.getEntryPointData()||{},s=e.fbig_ad_id,o=e.fbig_adset_id,_=e.fbig_campaign_id,g=document.createElement("script");g.async=!0,g.src="https://www.googletagmanager.com/gtag/js?id="+a,document.head.appendChild(g),gtag("set","client_storage","none"),gtag("set","client_id","100."+t),gtag("set","user_id",t),gtag("set","send_page_view",!1),gtag("js",new Date),gtag("config",a,{cookie_flags:"SameSite=None;Secure",build:i,medium:n,campaign:_,groups:"GA"}),gtag("set","user_properties",{user_id:t,traffic_source:n,campaign_id:_,adset_id:o,ad_id:s}),gtag("event","app_launch",{send_to:"GA"}),window.__analyticsInitiated=!0}else window.__analyticsInitiated=!0}else window.__analyticsInitiated=!0}initFbInstant();</script><script defer="defer" src="vendors.576d9d9dad76359603e4.bundle.js"></script><script defer="defer" src="engine.ebee3a6354c9b3eb1110.bundle.js"></script><script defer="defer" src="game.a48c02f2c167dba23717.bundle.js"></script></body></html>
+function gtag() { dataLayer.push(arguments); }</script><script src="https://assets.msn.com/staticsb/statics/latest/msstart-games-sdk/msstart-v1.0.0-rc.13.min.js"></script></head><body oncontextmenu="event.preventDefault()"><div id="app"><div id="app-bg"></div><div id="app-bg-overlay"></div></div><script src="sdk.8d618e94b656d0338aa8.bundle.js"></script><script>"use strict";function initFbInstant(){var t=1,n=setInterval((function(){"FBInstant"in window&&(clearInterval(n),FBInstant.initializeAsync().then((function(){window.focus();var n=FBInstant.player.getID();FBInstant.getEntryPointAsync().then((function(t){initGoogleAnalytics(n,t)})).catch((function(){initGoogleAnalytics(n,"no_entry")})),window.__fbInstantInitiated=!0,window.__fbInstantLoadingTimer=setInterval((function(){FBInstant.setLoadingProgress(t++),t>=30&&clearInterval(window.__fbInstantLoadingTimer)}),80)})))}),50)}function initGoogleAnalytics(t,n){if(window.__GA_CONFIG){var i=window.__GA_CONFIG.BUILD_VERSION,a=window.__GA_CONFIG.GA_MEASUREMENT_ID;if("null"!=a){var e=FBInstant.getEntryPointData()||{},s=e.fbig_ad_id,o=e.fbig_adset_id,_=e.fbig_campaign_id,g=document.createElement("script");g.async=!0,g.src="https://www.googletagmanager.com/gtag/js?id="+a,document.head.appendChild(g),gtag("set","client_storage","none"),gtag("set","client_id","100."+t),gtag("set","user_id",t),gtag("set","send_page_view",!1),gtag("js",new Date),gtag("config",a,{cookie_flags:"SameSite=None;Secure",build:i,medium:n,campaign:_,groups:"GA"}),gtag("set","user_properties",{user_id:t,traffic_source:n,campaign_id:_,adset_id:o,ad_id:s}),gtag("event","app_launch",{send_to:"GA"}),window.__analyticsInitiated=!0}else window.__analyticsInitiated=!0}else window.__analyticsInitiated=!0}initFbInstant();</script><script defer="defer" src="vendors.576d9d9dad76359603e4.bundle.js"></script><script defer="defer" src="engine.ebee3a6354c9b3eb1110.bundle.js"></script><script defer="defer" src="game.add1596dc730b85c3086.bundle.js"></script></body></html>
