--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="viewport-fit=cover,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,shrink-to-fit=no,user-scalable=no"/><title>Game Core</title><link rel="manifest" href="manifest.json"/><style>:root {
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="viewport-fit=cover,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,shrink-to-fit=no,user-scalable=no"/><title>Cat Sort Puzzle</title><link rel="manifest" href="manifest.json"/><style>:root {
                 --sat: env(safe-area-inset-top);
                 --sar: env(safe-area-inset-right);
                 --sab: env(safe-area-inset-bottom);
@@ -46,7 +46,7 @@
                 background-size: cover;
             }
 
-            #app-bg-overlay {
+            .overlay {
                 position: fixed;
                 top: 0;
                 left: 0;
@@ -126,7 +126,7 @@
 
             div[hidden] {
                 display: none !important;
-            }</style><link href="sdk.8d618e94b656d0338aa8.bundle.js" rel="preload" as="script"/><link href="vendors.576d9d9dad76359603e4.bundle.js" rel="preload" as="script"/><link href="engine.ebee3a6354c9b3eb1110.bundle.js" rel="preload" as="script"/><link href="game.2f05018f402ca7e3ecb6.bundle.js" rel="preload" as="script"/><script defer="defer" src="libs/sentry.min.js"></script><script>"use strict"
+            }</style><link href="sdk.cfdffbf9aeca5ce912fa.bundle.js" rel="preload" as="script"/><link href="vendors.6248949a7a87b161f223.bundle.js" rel="preload" as="script"/><link href="engine.eadb12dcd260453581c6.bundle.js" rel="preload" as="script"/><link href="game.33220265fab62ded1bd3.bundle.js" rel="preload" as="script"/><script defer="defer" src="libs/sentry.min.js"></script><script>"use strict"
 
     var waitSentryTimer = setInterval(function () {
     if (!window.hasOwnProperty('Sentry')) return
@@ -141,4 +141,9 @@
         tracesSampleRate: '1.0',
     })
     }, 100)</script><script>window.dataLayer = window.dataLayer || [];
-function gtag() { dataLayer.push(arguments); }</script><script src="https://assets.msn.com/staticsb/statics/latest/msstart-games-sdk/msstart-v1.0.0-rc.13.min.js"></script></head><body oncontextmenu="event.preventDefault()"><div id="app"><div id="app-bg"></div><div id="app-bg-overlay"></div></div><script src="sdk.8d618e94b656d0338aa8.bundle.js"></script><script>"use strict";function initFbInstant(){var t=1,n=setInterval((function(){"FBInstant"in window&&(clearInterval(n),FBInstant.initializeAsync().then((function(){window.focus();var n=FBInstant.player.getID();FBInstant.getEntryPointAsync().then((function(t){initGoogleAnalytics(n,t)})).catch((function(){initGoogleAnalytics(n,"no_entry")})),window.__fbInstantInitiated=!0,window.__fbInstantLoadingTimer=setInterval((function(){FBInstant.setLoadingProgress(t++),t>=30&&clearInterval(window.__fbInstantLoadingTimer)}),80)})))}),50)}function initGoogleAnalytics(t,n){if(window.__GA_CONFIG){var i=window.__GA_CONFIG.BUILD_VERSION,a=window.__GA_CONFIG.GA_MEASUREMENT_ID;if("null"!=a){var e=FBInstant.getEntryPointData()||{},s=e.fbig_ad_id,o=e.fbig_adset_id,_=e.fbig_campaign_id,g=document.createElement("script");g.async=!0,g.src="https://www.googletagmanager.com/gtag/js?id="+a,document.head.appendChild(g),gtag("set","client_storage","none"),gtag("set","client_id","100."+t),gtag("set","user_id",t),gtag("set","send_page_view",!1),gtag("js",new Date),gtag("config",a,{cookie_flags:"SameSite=None;Secure",build:i,medium:n,campaign:_,groups:"GA"}),gtag("set","user_properties",{user_id:t,traffic_source:n,campaign_id:_,adset_id:o,ad_id:s}),gtag("event","app_launch",{send_to:"GA"}),window.__analyticsInitiated=!0}else window.__analyticsInitiated=!0}else window.__analyticsInitiated=!0}initFbInstant();</script><script defer="defer" src="vendors.576d9d9dad76359603e4.bundle.js"></script><script defer="defer" src="engine.ebee3a6354c9b3eb1110.bundle.js"></script><script defer="defer" src="game.2f05018f402ca7e3ecb6.bundle.js"></script></body></html>
+function gtag() { dataLayer.push(arguments); }</script><link href="https://www.googletagmanager.com/gtag/js?id=G-804GRKYKVV" rel="preload" as="script"/><script>window.dataLayer = window.dataLayer || [];
+        window.__GA_CONFIG = {
+            GAME_NAME: 'Cat Sort Puzzle',
+            GA_MEASUREMENT_ID: 'G-804GRKYKVV',
+            BUILD_VERSION: '0',
+        }</script><script src="https://assets.msn.com/staticsb/statics/latest/msstart-games-sdk/msstart-v1.0.0-rc.13.min.js"></script></head><body oncontextmenu="event.preventDefault()"><div id="app"><div id="app-bg"></div><div id="app-bg-overlay" class="overlay"></div><div id="app-bg-notify-overlay" class="overlay"></div></div><script src="sdk.cfdffbf9aeca5ce912fa.bundle.js"></script><script>"use strict";function initFbInstant(){var t=1,n=setInterval((function(){"FBInstant"in window&&(clearInterval(n),FBInstant.initializeAsync().then((function(){window.focus();var n=FBInstant.player.getID();FBInstant.getEntryPointAsync().then((function(t){initGoogleAnalytics(n,t)})).catch((function(){initGoogleAnalytics(n,"no_entry")})),window.__fbInstantInitiated=!0,window.__fbInstantLoadingTimer=setInterval((function(){FBInstant.setLoadingProgress(t++),t>=30&&clearInterval(window.__fbInstantLoadingTimer)}),80)})))}),50)}function initGoogleAnalytics(t,n){if(window.__GA_CONFIG){var i=window.__GA_CONFIG.BUILD_VERSION,a=window.__GA_CONFIG.GA_MEASUREMENT_ID;if("null"!=a){var e=FBInstant.getEntryPointData()||{},s=e.fbig_ad_id,o=e.fbig_adset_id,_=e.fbig_campaign_id,g=document.createElement("script");g.async=!0,g.src="https://www.googletagmanager.com/gtag/js?id="+a,document.head.appendChild(g),gtag("set","client_storage","none"),gtag("set","client_id","100."+t),gtag("set","user_id",t),gtag("set","send_page_view",!1),gtag("js",new Date),gtag("config",a,{cookie_flags:"SameSite=None;Secure",build:i,medium:n,campaign:_,groups:"GA"}),gtag("set","user_properties",{user_id:t,traffic_source:n,campaign_id:_,adset_id:o,ad_id:s}),gtag("event","app_launch",{send_to:"GA"}),window.__analyticsInitiated=!0}else window.__analyticsInitiated=!0}else window.__analyticsInitiated=!0}initFbInstant();</script><script defer="defer" src="vendors.6248949a7a87b161f223.bundle.js"></script><script defer="defer" src="engine.eadb12dcd260453581c6.bundle.js"></script><script defer="defer" src="game.33220265fab62ded1bd3.bundle.js"></script></body></html>
